; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginpostinglist.c_uint64_to_itemptr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginpostinglist.c_uint64_to_itemptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MaxHeapTuplesPerPageBits = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @uint64_to_itemptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uint64_to_itemptr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @MaxHeapTuplesPerPageBits, align 4
  %8 = shl i32 1, %7
  %9 = sub nsw i32 %8, 1
  %10 = and i32 %6, %9
  %11 = call i32 @GinItemPointerSetOffsetNumber(i32 %5, i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @MaxHeapTuplesPerPageBits, align 4
  %14 = ashr i32 %12, %13
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @GinItemPointerSetBlockNumber(i32 %15, i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @ItemPointerIsValid(i32 %18)
  %20 = call i32 @Assert(i32 %19)
  ret void
}

declare dso_local i32 @GinItemPointerSetOffsetNumber(i32, i32) #1

declare dso_local i32 @GinItemPointerSetBlockNumber(i32, i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @ItemPointerIsValid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
